# C_Homework

./: .gitignore
05.02/: Circle.cpp  Circle.hpp  DateTime.cpp  DateTime.hpp  main.cpp
Matrix/: Matrix.cpp  Matrix.hpp  main.cpp
Ocean/: scheme.drawio
Ocean/Actions/: Action.cpp
Ocean/entities/: Neighbourhood.cpp  Object.cpp  Ocean.cpp  Stone.cpp
Ocean2_0/: CMakeLists.txt  ReadME.md  Simulations.cpp  constants.hpp
Ocean2_0/Actions/: Action.hpp  Death.cpp  Death.hpp  Eating.cpp  Eating.hpp  Evalution.cpp  Evalution.hpp  Mating.cpp  Mating.hpp  Move.cpp  Move.hpp  NoAction.cpp  NoAction.hpp
Ocean2_0/Entities/: ApexPredator.cpp  ApexPredator.hpp  Cell.cpp  Cell.hpp  Neighbourhood.cpp  Neighbourhood.hpp  Object.cpp  Object.hpp  Ocean.cpp  Ocean.hpp  Predator.cpp  Predator.hpp  Prey.cpp  Prey.hpp  Reef.cpp  Reef.hpp  Stone.cpp  Stone.hpp
Ocean2_0/MemoryPool/: MemPool.cpp  MemPool.hpp  MixinPool.hpp  Point.cpp  pool (1).md  questions.txt  testMemPool.cpp
